// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transactions.sql > line 7 1`] = `
[
  "CREATE TABLE xacttest (a smallint, b real)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "xacttest",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 23,
                  "typeName": {
                    "location": 25,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int2",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 35,
                  "typeName": {
                    "location": 37,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "float4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 15 1`] = `
[
  "END",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_COMMIT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 18 1`] = `
[
  "SELECT a FROM xacttest WHERE a > 100",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "xacttest",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "a",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "a",
                        },
                      },
                    ],
                    "location": 29,
                  },
                },
                "location": 31,
                "name": [
                  {
                    "String": {
                      "sval": ">",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 100,
                    },
                    "location": 33,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 23 1`] = `
[
  "CREATE TABLE disappear (a int4)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "disappear",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 24,
                  "typeName": {
                    "location": 26,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 25 1`] = `
[
  "DELETE FROM xacttest",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "xacttest",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 28 1`] = `
[
  "SELECT * FROM xacttest",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "xacttest",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 30 1`] = `
[
  "ABORT",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_ROLLBACK",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 33 1`] = `
[
  "SELECT oid FROM pg_class WHERE relname = 'disappear'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 16,
                  "relname": "pg_class",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "oid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "relname",
                        },
                      },
                    ],
                    "location": 31,
                  },
                },
                "location": 39,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 41,
                    "sval": {
                      "sval": "disappear",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 39 1`] = `
[
  "BEGIN TRANSACTION ISOLATION LEVEL SERIALIZABLE",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_BEGIN",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "A_Const": {
                      "location": 34,
                      "sval": {
                        "sval": "serializable",
                      },
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "transaction_isolation",
                  "location": 18,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 54 1`] = `
[
  "CREATE FUNCTION errfunc() RETURNS int LANGUAGE SQL AS 'SELECT 1'
SET transaction_read_only = on",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "errfunc",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 38,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "SELECT 1",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 51,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "VariableSetStmt": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 93,
                            "sval": {
                              "sval": "on",
                            },
                          },
                        },
                      ],
                      "kind": "VAR_SET_VALUE",
                      "name": "transaction_read_only",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "set",
                  "location": 65,
                },
              },
            ],
            "returnType": {
              "location": 34,
              "names": [
                {
                  "String": {
                    "sval": "pg_catalog",
                  },
                },
                {
                  "String": {
                    "sval": "int4",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 55 1`] = `
[
  " -- error

-- Read-only tests

CREATE TABLE writetest (a int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 44,
              "relname": "writetest",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 55,
                  "typeName": {
                    "location": 57,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 63 1`] = `
[
  " -- ok
SELECT * FROM writetest",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 21,
                  "relname": "writetest",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 14,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 14,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 64 1`] = `
[
  " -- ok
SET TRANSACTION READ WRITE",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "DefElem": {
                  "arg": {
                    "A_Const": {
                      "ival": {},
                      "location": 23,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "transaction_read_only",
                  "location": 23,
                },
              },
            ],
            "kind": "VAR_SET_MULTI",
            "name": "TRANSACTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 72 1`] = `
[
  " -- ok
SAVEPOINT x",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_SAVEPOINT",
            "savepoint_name": "x",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 94 1`] = `
[
  " -- ok
ROLLBACK TO SAVEPOINT x",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_ROLLBACK_TO",
            "savepoint_name": "x",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 99 1`] = `
[
  " -- ok
RELEASE SAVEPOINT y",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_RELEASE",
            "savepoint_name": "y",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 104 1`] = `
[
  "SET SESSION CHARACTERISTICS AS TRANSACTION READ ONLY",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "DefElem": {
                  "arg": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 43,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "transaction_read_only",
                  "location": 43,
                },
              },
            ],
            "kind": "VAR_SET_MULTI",
            "name": "SESSION CHARACTERISTICS",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 106 1`] = `
[
  "DROP TABLE writetest",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "writetest",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 106 2`] = `
[
  " -- fail
INSERT INTO writetest VALUES (1)",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 21,
              "relname": "writetest",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 39,
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 108 1`] = `
[
  " -- ok
DELETE FROM temptest",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 19,
              "relname": "temptest",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 109 1`] = `
[
  " -- ok
UPDATE temptest SET a = 0 FROM writetest WHERE temptest.a = 1 AND writetest.a = temptest.a",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 38,
                  "relname": "writetest",
                  "relpersistence": "p",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 14,
              "relname": "temptest",
              "relpersistence": "p",
            },
            "targetList": [
              {
                "ResTarget": {
                  "location": 27,
                  "name": "a",
                  "val": {
                    "A_Const": {
                      "ival": {},
                      "location": 31,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "temptest",
                              },
                            },
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                          ],
                          "location": 54,
                        },
                      },
                      "location": 65,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 67,
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "writetest",
                              },
                            },
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                          ],
                          "location": 73,
                        },
                      },
                      "location": 85,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "temptest",
                              },
                            },
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                          ],
                          "location": 87,
                        },
                      },
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 69,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 110 1`] = `
[
  " -- ok
PREPARE test AS UPDATE writetest SET a = 0",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "name": "test",
            "query": {
              "UpdateStmt": {
                "relation": {
                  "inh": true,
                  "location": 30,
                  "relname": "writetest",
                  "relpersistence": "p",
                },
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 44,
                      "name": "a",
                      "val": {
                        "A_Const": {
                          "ival": {},
                          "location": 48,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 111 1`] = `
[
  " -- ok
EXECUTE test",
  {
    "stmts": [
      {
        "stmt": {
          "ExecuteStmt": {
            "name": "test",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 112 1`] = `
[
  " -- fail
SELECT * FROM writetest, temptest",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 23,
                  "relname": "writetest",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "inh": true,
                  "location": 34,
                  "relname": "temptest",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 113 1`] = `
[
  " -- ok
CREATE TABLE test AS SELECT * FROM writetest",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 20,
                "relname": "test",
                "relpersistence": "p",
              },
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 42,
                      "relname": "writetest",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 35,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 35,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 114 1`] = `
[
  " -- fail

START TRANSACTION READ WRITE",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_START",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "A_Const": {
                      "ival": {},
                      "location": 28,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "transaction_read_only",
                  "location": 28,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 138 1`] = `
[
  "SELECT * FROM trans_foo",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "trans_foo",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 138 2`] = `
[
  "		-- should be empty
SELECT * FROM trans_bar",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 35,
                  "relname": "trans_bar",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 28,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 28,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 139 1`] = `
[
  "		-- shouldn't exist
SELECT * FROM trans_barbaz",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 35,
                  "relname": "trans_barbaz",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 28,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 28,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 140 1`] = `
[
  "	-- should be empty
SELECT * FROM trans_baz",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 34,
                  "relname": "trans_baz",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 27,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 27,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 180 1`] = `
[
  "		-- should not be in a transaction block
SELECT * FROM savepoints",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 56,
                  "relname": "savepoints",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 49,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 49,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 214 1`] = `
[
  "SELECT a.xmin = b.xmin FROM savepoints a, savepoints b WHERE a.a=6 AND b.a=8",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "a",
                  },
                  "inh": true,
                  "location": 28,
                  "relname": "savepoints",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "b",
                  },
                  "inh": true,
                  "location": 42,
                  "relname": "savepoints",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                            {
                              "String": {
                                "sval": "xmin",
                              },
                            },
                          ],
                          "location": 7,
                        },
                      },
                      "location": 14,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "b",
                              },
                            },
                            {
                              "String": {
                                "sval": "xmin",
                              },
                            },
                          ],
                          "location": 16,
                        },
                      },
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                          ],
                          "location": 61,
                        },
                      },
                      "location": 64,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 6,
                          },
                          "location": 65,
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "b",
                              },
                            },
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                          ],
                          "location": 71,
                        },
                      },
                      "location": 74,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 8,
                          },
                          "location": 75,
                        },
                      },
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 67,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 257 1`] = `
[
  "DROP TABLE savepoints",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "savepoints",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 290 1`] = `
[
  "		FETCH 10 FROM c",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 10,
            "portalname": "c",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 304 1`] = `
[
  "create or replace function max_xacttest() returns smallint language sql as
'select max(a) from xacttest' stable",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "max_xacttest",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 59,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "select max(a) from xacttest",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 72,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "stable",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "volatility",
                  "location": 105,
                },
              },
            ],
            "replace": true,
            "returnType": {
              "location": 50,
              "names": [
                {
                  "String": {
                    "sval": "pg_catalog",
                  },
                },
                {
                  "String": {
                    "sval": "int2",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 347 1`] = `
[
  "	CREATE TABLE koju (a INT UNIQUE)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 14,
              "relname": "koju",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_UNIQUE",
                        "location": 26,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 20,
                  "typeName": {
                    "location": 22,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 352 1`] = `
[
  "DROP TABLE trans_foo",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "trans_foo",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 358 1`] = `
[
  "create function inverse(int) returns float8 as
$$
begin
  analyze revalidate_bug;
  return 1::float8/$1;
exception
  when division_by_zero then return 0;
end$$ language plpgsql volatile",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "inverse",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
begin
  analyze revalidate_bug;
  return 1::float8/$1;
exception
  when division_by_zero then return 0;
end",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 44,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "plpgsql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 160,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "volatile",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "volatility",
                  "location": 177,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 24,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                },
              },
            ],
            "returnType": {
              "location": 37,
              "names": [
                {
                  "String": {
                    "sval": "float8",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 367 1`] = `
[
  "create table revalidate_bug (c float8 unique)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "revalidate_bug",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "c",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_UNIQUE",
                        "location": 38,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 29,
                  "typeName": {
                    "location": 31,
                    "names": [
                      {
                        "String": {
                          "sval": "float8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 371 1`] = `
[
  "drop table revalidate_bug",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "revalidate_bug",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 389 1`] = `
[
  "fetch from foo",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 1,
            "portalname": "foo",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 394 1`] = `
[
  "create table trans_abc (a int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "trans_abc",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 24,
                  "typeName": {
                    "location": 26,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 413 1`] = `
[
  "CREATE FUNCTION invert(x float8) RETURNS float8 LANGUAGE plpgsql AS
$$ begin return 1/x; end $$",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "invert",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "plpgsql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 48,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": " begin return 1/x; end ",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 65,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 25,
                    "names": [
                      {
                        "String": {
                          "sval": "float8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                  "name": "x",
                },
              },
            ],
            "returnType": {
              "location": 41,
              "names": [
                {
                  "String": {
                    "sval": "float8",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 416 1`] = `
[
  "CREATE FUNCTION create_temp_tab() RETURNS text
LANGUAGE plpgsql AS $$
BEGIN
  CREATE TEMP TABLE new_table (f1 float8);
  -- case of interest is that we fail while holding an open
  -- relcache reference to new_table
  INSERT INTO new_table SELECT invert(0.0);
  RETURN 'foo';
END $$",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "create_temp_tab",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "plpgsql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 47,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
BEGIN
  CREATE TEMP TABLE new_table (f1 float8);
  -- case of interest is that we fail while holding an open
  -- relcache reference to new_table
  INSERT INTO new_table SELECT invert(0.0);
  RETURN 'foo';
END ",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 64,
                },
              },
            ],
            "returnType": {
              "location": 42,
              "names": [
                {
                  "String": {
                    "sval": "text",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 438 1`] = `
[
  "DROP FUNCTION create_temp_tab()",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objname": [
                    {
                      "String": {
                        "sval": "create_temp_tab",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_FUNCTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 447 1`] = `
[
  "SET default_transaction_read_only = on",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 36,
                  "sval": {
                    "sval": "on",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "default_transaction_read_only",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 455 1`] = `
[
  "  -- TBLOCK_END
SHOW transaction_isolation",
  {
    "stmts": [
      {
        "stmt": {
          "VariableShowStmt": {
            "name": "transaction_isolation",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 460 1`] = `
[
  "  -- check it's really aborted
COMMIT AND CHAIN",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "chain": true,
            "kind": "TRANS_STMT_COMMIT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 521 1`] = `
[
  "  -- error
ROLLBACK AND CHAIN",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "chain": true,
            "kind": "TRANS_STMT_ROLLBACK",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 522 1`] = `
[
  "  -- error

SELECT * FROM trans_abc ORDER BY 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 26,
                  "relname": "trans_abc",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 45,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 19,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 19,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 526 1`] = `
[
  "RESET default_transaction_read_only",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "default_transaction_read_only",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 528 1`] = `
[
  "DROP TABLE trans_abc",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "trans_abc",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 539 1`] = `
[
  " SELECT 3",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 8,
                  "val": {
                    "A_Const": {
                      "ival": {
                        "ival": 3,
                      },
                      "location": 8,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 542 1`] = `
[
  " select * from i_table",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 15,
                  "relname": "i_table",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 8,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 8,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 544 1`] = `
[
  " select 1/0",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 8,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 8,
                        },
                      },
                      "location": 9,
                      "name": [
                        {
                          "String": {
                            "sval": "/",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {},
                          "location": 10,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 557 1`] = `
[
  " insert into i_table values(5)",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "i_table",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 5,
                            },
                            "location": 28,
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 572 1`] = `
[
  " VACUUM",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 587 1`] = `
[
  "  -- error
SHOW transaction_read_only",
  {
    "stmts": [
      {
        "stmt": {
          "VariableShowStmt": {
            "name": "transaction_read_only",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 612 1`] = `
[
  "SET default_transaction_isolation = 'read committed'",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 36,
                  "sval": {
                    "sval": "read committed",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "default_transaction_isolation",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`transactions.sql > line 619 1`] = `
[
  "  -- out of transaction block

RESET default_transaction_isolation",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "default_transaction_isolation",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
